fix overflow on hello route

--- a/src/style/_hello.scss
+++ b/src/style/_hello.scss
@@ -30,6 +30,7 @@ body {
 
         .my-did {
             margin-top: 0.2rem;
+            overflow: scroll;
         }
 
         .my-avatar {
